// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleFlag does not render article flags if there are none 1`] = `
<body>
  <div />
</body>
`;

exports[`ArticleFlag renders a red article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw fPvUaP"
        color="red"
      />
      <div
        aria-label="Coloured Red Flag"
        class="sc-htoDjs ncDCH"
        color="red"
        data-testid="flag-Coloured Red"
      >
        coloured red
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders an article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw cHiziO"
        color=""
      />
      <div
        aria-label="No Colour Flag"
        class="sc-htoDjs hRDVKn"
        color=""
        data-testid="flag-No Colour"
      >
        no colour
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders multiple article flags 1`] = `
<body>
  <div>
    <div
      class="sc-iwsKbI bPFwfE"
    >
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw iUvIFG"
            color="#3C81BE"
          />
          <div
            aria-label="updated Flag"
            class="sc-htoDjs dbNGOL"
            color="#3C81BE"
            data-testid="flag-updated"
          >
            updated
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw bqGcnc"
            color="#C51D24"
          />
          <div
            aria-label="exclusive Flag"
            class="sc-htoDjs lhEIVQ"
            color="#C51D24"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw egfKdN"
            color="#E34605"
          />
          <div
            aria-label="new Flag"
            class="sc-htoDjs wUviF"
            color="#E34605"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw bEAoFq"
            color="#4D4D4D"
          />
          <div
            aria-label="sponsored Flag"
            class="sc-htoDjs dMtSoY"
            color="#4D4D4D"
            data-testid="flag-sponsored"
          >
            sponsored
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw cZlOEJ"
            color="#696969"
          />
          <div
            aria-label="long read Flag"
            class="sc-htoDjs eiFlqN"
            color="#696969"
            data-testid="flag-long read"
          >
            long read
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders multiple article flags in a container 1`] = `
<body>
  <div>
    <div
      class="sc-gZMcBi COSiX"
    >
      <div
        class="sc-iwsKbI bPFwfE"
      >
        <div
          class="sc-dnqmqq cjdAHZ"
        >
          <div
            class="sc-EHOje cfBXHC"
          >
            <div
              class="sc-gzVnrw iUvIFG"
              color="#3C81BE"
            />
            <div
              aria-label="updated Flag"
              class="sc-htoDjs dbNGOL"
              color="#3C81BE"
              data-testid="flag-updated"
            >
              updated
            </div>
          </div>
        </div>
        <div
          class="sc-dnqmqq cjdAHZ"
        >
          <div
            class="sc-EHOje cfBXHC"
          >
            <div
              class="sc-gzVnrw bqGcnc"
              color="#C51D24"
            />
            <div
              aria-label="exclusive Flag"
              class="sc-htoDjs lhEIVQ"
              color="#C51D24"
              data-testid="flag-exclusive"
            >
              exclusive
            </div>
          </div>
        </div>
        <div
          class="sc-dnqmqq cjdAHZ"
        >
          <div
            class="sc-EHOje cfBXHC"
          >
            <div
              class="sc-gzVnrw egfKdN"
              color="#E34605"
            />
            <div
              aria-label="new Flag"
              class="sc-htoDjs wUviF"
              color="#E34605"
              data-testid="flag-new"
            >
              new
            </div>
          </div>
        </div>
        <div
          class="sc-dnqmqq cjdAHZ"
        >
          <div
            class="sc-EHOje cfBXHC"
          >
            <div
              class="sc-gzVnrw bEAoFq"
              color="#4D4D4D"
            />
            <div
              aria-label="sponsored Flag"
              class="sc-htoDjs dMtSoY"
              color="#4D4D4D"
              data-testid="flag-sponsored"
            >
              sponsored
            </div>
          </div>
        </div>
        <div
          class="sc-dnqmqq cjdAHZ"
        >
          <div
            class="sc-EHOje cfBXHC"
          >
            <div
              class="sc-gzVnrw cZlOEJ"
              color="#696969"
            />
            <div
              aria-label="long read Flag"
              class="sc-htoDjs eiFlqN"
              color="#696969"
              data-testid="flag-long read"
            >
              long read
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders multiple article flags with override colours 1`] = `
<body>
  <div>
    <div
      class="sc-iwsKbI bPFwfE"
    >
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw ejlEIs"
            color="#FFFFFF"
          />
          <div
            aria-label="updated Flag"
            class="sc-htoDjs eVIEwX"
            color="#FFFFFF"
            data-testid="flag-updated"
          >
            updated
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw ejlEIs"
            color="#FFFFFF"
          />
          <div
            aria-label="exclusive Flag"
            class="sc-htoDjs eVIEwX"
            color="#FFFFFF"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw ejlEIs"
            color="#FFFFFF"
          />
          <div
            aria-label="new Flag"
            class="sc-htoDjs eVIEwX"
            color="#FFFFFF"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw ejlEIs"
            color="#FFFFFF"
          />
          <div
            aria-label="sponsored Flag"
            class="sc-htoDjs eVIEwX"
            color="#FFFFFF"
            data-testid="flag-sponsored"
          >
            sponsored
          </div>
        </div>
      </div>
      <div
        class="sc-dnqmqq cjdAHZ"
      >
        <div
          class="sc-EHOje cfBXHC"
        >
          <div
            class="sc-gzVnrw ejlEIs"
            color="#FFFFFF"
          />
          <div
            aria-label="long read Flag"
            class="sc-htoDjs eVIEwX"
            color="#FFFFFF"
            data-testid="flag-long read"
          >
            long read
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the exclusive article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw bqGcnc"
        color="#C51D24"
      />
      <div
        aria-label="exclusive Flag"
        class="sc-htoDjs lhEIVQ"
        color="#C51D24"
        data-testid="flag-exclusive"
      >
        exclusive
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the exclusive article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw ejlEIs"
        color="#FFFFFF"
      />
      <div
        aria-label="exclusive Flag"
        class="sc-htoDjs eVIEwX"
        color="#FFFFFF"
        data-testid="flag-exclusive"
      >
        exclusive
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the long read article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw cZlOEJ"
        color="#696969"
      />
      <div
        aria-label="long read Flag"
        class="sc-htoDjs eiFlqN"
        color="#696969"
        data-testid="flag-long read"
      >
        long read
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the long read article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw ejlEIs"
        color="#FFFFFF"
      />
      <div
        aria-label="long read Flag"
        class="sc-htoDjs eVIEwX"
        color="#FFFFFF"
        data-testid="flag-long read"
      >
        long read
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the new article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw egfKdN"
        color="#E34605"
      />
      <div
        aria-label="new Flag"
        class="sc-htoDjs wUviF"
        color="#E34605"
        data-testid="flag-new"
      >
        new
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the new article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw ejlEIs"
        color="#FFFFFF"
      />
      <div
        aria-label="new Flag"
        class="sc-htoDjs eVIEwX"
        color="#FFFFFF"
        data-testid="flag-new"
      >
        new
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the sponsored article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw bEAoFq"
        color="#4D4D4D"
      />
      <div
        aria-label="sponsored Flag"
        class="sc-htoDjs dMtSoY"
        color="#4D4D4D"
        data-testid="flag-sponsored"
      >
        sponsored
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the sponsored article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw ejlEIs"
        color="#FFFFFF"
      />
      <div
        aria-label="sponsored Flag"
        class="sc-htoDjs eVIEwX"
        color="#FFFFFF"
        data-testid="flag-sponsored"
      >
        sponsored
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the updated article flag 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw iUvIFG"
        color="#3C81BE"
      />
      <div
        aria-label="updated Flag"
        class="sc-htoDjs dbNGOL"
        color="#3C81BE"
        data-testid="flag-updated"
      >
        updated
      </div>
    </div>
  </div>
</body>
`;

exports[`ArticleFlag renders the updated article flag with an override colour 1`] = `
<body>
  <div>
    <div
      class="sc-EHOje cfBXHC"
    >
      <div
        class="sc-gzVnrw ejlEIs"
        color="#FFFFFF"
      />
      <div
        aria-label="updated Flag"
        class="sc-htoDjs eVIEwX"
        color="#FFFFFF"
        data-testid="flag-updated"
      >
        updated
      </div>
    </div>
  </div>
</body>
`;
